--- a/modules.html
+++ b/modules.html
@@ -7,7 +7,7 @@
 <script src="data.js"></script>
 <style>
 body {
-  background: #f7f9fc;
+  background: red;
   font-family: 'Segoe UI', Roboto, Arial, sans-serif;
   color: #1e293b;
   margin: 0;
