--- a/modules.html
+++ b/modules.html
@@ -7,7 +7,7 @@
 <script src="data.js"></script>
 <style>
 body {
-  background: red;
+  background: #f7f9fc;
   font-family: 'Segoe UI', Roboto, Arial, sans-serif;
   color: #1e293b;
   margin: 0;
@@ -161,7 +161,6 @@ footer {
   color: #334155;
 }
 main{
-  height: 100vh;
   align-content: center;
 }
 .module-title{
@@ -188,7 +187,6 @@ main{
     grid-template-columns: 1fr 1fr;
   }
   main{
-    height: 100vh;
     align-content: center;
   }
   .tabs{
