--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Шынар Сайын — предприниматель</title>
+<title>«Шынар Сайынқызының авторлық курсы - Көшбасшылық бойынша қалыптастыру курсы»</title>
+<link rel="icon" type="image/png" href="https://s14.gifyu.com/images/bN8sp.jpg">
 <style>
 body {
     background:#0f172a;
@@ -107,8 +108,8 @@ body {
 <body>
 <div class="hero">
     <img src="https://s14.gifyu.com/images/bN6un.png" alt="Шынар Сайын"/>
-    <h1>Шынар Сайын</h1>
-    <h2>Предприниматель в области здоровья и красоты</h2>
+    <h1>Шынар Сайын</h1>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы
+    <h2>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы <br>Предприниматель в области здоровья и красоты</h2>
     <div class="bio">
         <p>Я являюсь предпринимателем с многолетним опытом в создании и развитии бизнеса в сфере здоровья и красоты. 
         Стремлюсь создавать успешные бизнесы, которые не только отвечают современным требованиям, но и устанавливают 
@@ -136,3 +137,4 @@ body {
 </div>
 </body>
 </html>
+
