--- a/modules.html
+++ b/modules.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Образовательные модули</title>
+<link rel="icon" type="image/png" href="https://s14.gifyu.com/images/bN8sp.jpg">
+
 <script src="data.js"></script>
 <style>
 body {
