--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@ body {
 <body>
 <div class="hero">
     <img src="https://s14.gifyu.com/images/bN6un.png" alt="Шынар Сайын"/>
-    <h1>Шынар Сайын</h1>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы
-    <h2>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы <br>Предприниматель в области здоровья и красоты</h2>
+    <h1>Шынар Сайын</h1>
+    <h2>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы</h2>
+    <p>Предприниматель в области здоровья и красоты</p>
     <div class="bio">
         <p>Я являюсь предпринимателем с многолетним опытом в создании и развитии бизнеса в сфере здоровья и красоты. 
         Стремлюсь создавать успешные бизнесы, которые не только отвечают современным требованиям, но и устанавливают 
@@ -137,4 +138,5 @@ body {
 </div>
 </body>
 </html>
+
 
