--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@ body {
 <div class="hero">
     <img src="https://s14.gifyu.com/images/bN6un.png" alt="Шынар Сайын"/>
     <h1>Шынар Сайын</h1>
-    <h2>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы</h2>
-    <p>Предприниматель в области здоровья и красоты</p>
+    <h2>Предприниматель в области здоровья и красоты</h2>
     <div class="bio">
         <p>Я являюсь предпринимателем с многолетним опытом в создании и развитии бизнеса в сфере здоровья и красоты. 
         Стремлюсь создавать успешные бизнесы, которые не только отвечают современным требованиям, но и устанавливают 
         новые стандарты в индустрии красоты и здоровья.</p>
     </div>
+    <h2>«Көшбасшылық бойынша қалыптастыру курсы» — авторский курс Шынар Сайынкызы</h2>
     <a href="modules.html" class="button-primary">Перейти к модулям</a>
     <div class="facts">
         <div class="fact">
@@ -138,5 +138,6 @@ body {
 </div>
 </body>
 </html>
+
 
 
